@@ -105,8 +105,9 @@ uppercase, you don't need to press Shift.</p>
    <h3>Rules</h3>
 
    <p>Nostalgy has a notion of rule. A rule associates a folder to a
-   message by looking for a substring of the Sender or Subject (or both)
-   headers. A rule can be restricted to match messages only under
+   message by looking for a substring of the From or To/Cc, or Subject 
+   headers (or a combination of them). 
+   A rule can be restricted to match messages only under
    a given server/folder. When a rule selects a folder for a given message,
     Nostalgy
    informs you in the status line.  You can then use the Shift-S/Shift-C
